# minecrust

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: deploy.sh  dev-deploy.sh  no-build-deploy.sh
src/: App.tsx  main.tsx
src/global/styles/: global.scss
src/world-canvas/: WorldCanvas.tsx  style.scss
world/: Cargo.toml
world/pkg/: package.json  world.d.ts  world.js  world_bg.wasm.d.ts
world/src/: cubes.rs  cursor.rs  lib.rs  main.rs  random.rs  ui.rs
world/src/block/: events.rs  materials.rs  mesh.rs  meshes.rs  mod.rs  modify.rs  pick.rs  uv.rs
world/src/camera/: controls.rs  mod.rs  skybox.rs
